Fix the bug from time lib on linux for module .h

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ ignore/
 /modules/controlers/linear/RHC/nbproject/private/
 /modules/controlers/linear/RLP/nbproject/private/
 /modules/controlers/linear/MPC/nbproject/private/
+/modules/controlers/linear/Desafio1P1/nbproject/private/
