--- a/modules/controlers/linear/LP/nbproject/project.properties
+++ b/modules/controlers/linear/LP/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=LP
+application.vendor=vhcandido
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/LP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.cplex.jar=C:\\Program Files\\IBM\\ILOG\\CPLEX_Studio1263\\cplex\\lib\\cplex.jar
+file.reference.cplex.jar=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/lib/cplex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +54,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.cplex.jar=C:\\Program Files\\IBM\\ILOG\\CPLEX_Studio1263\\doc\\html\\en-US\\refjavacplex\\html
+javadoc.reference.cplex.jar=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/lib/cplex.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -68,7 +70,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.library.path=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/bin/x86-64_linux
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
