--- a/modules/controlers/challenges/Challenge1/nbproject/project.properties
+++ b/modules/controlers/challenges/Challenge1/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/Challenge1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-math3-3.6.1.jar=/home/vhcandido/Documents/usp/2o_semestre/path_planning/commons-math3-3.6.1/commons-math3-3.6.1.jar
 file.reference.cplex.jar=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/lib/cplex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.cplex.jar}
+    ${file.reference.cplex.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,6 +56,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-math3-3.6.1.jar=/home/vhcandido/Documents/usp/2o_semestre/path_planning/commons-math3-3.6.1/commons-math3-3.6.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -69,7 +72,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=Djava.library.path=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/bin/x86-64_linux
+run.jvmargs=-Djava.library.path=/opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/bin/x86-64_linux
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
